--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -21,6 +21,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
+  align-items: center;
   padding-left: 3px;
   padding-right: 6.5px;
 }
